# galatiq-case-invoices

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/agents/: accountant_agent.py  graph.py  ingestion_agent.py  payment_agent.py  reasoning_agent.py  rejection_handler.py  state.py  validation_agent.py
backend/api/: approvals.py  invoices.py  metrics.py
backend/models/: invoice.py
backend/services/: approval_service.py  invoice_service.py  metrics_service.py
backend/tests/: conftest.py  mock_llm.py  test_pipeline.py
backend/tools/: batch_process.py  eval_harness.py  langsmith_traces.py
backend/utils/: __init__.py  llm_utils.py
data/: batch_results.json  eval_report.json  setup_inventory.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: InvoiceDetail.tsx  InvoiceQueue.tsx  MetricsBar.tsx  VPApprovalPanel.tsx
