[tool.poetry]
name = "galatiq-case-invoices"
version = "0.1.0"
description = "Multi-agent invoice processing pipeline"
authors = ["Ginoitaliano"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python          = "^3.12"

# API
fastapi         = "^0.115.0"
uvicorn         = {extras = ["standard"], version = "^0.30.0"}
pydantic        = "^2.7.0"
pydantic-settings = "^2.3.0"

# LLM / agents
langchain       = "^0.3.0"
langgraph       = "^0.2.0"
langsmith       = "^0.1.0"
langchain-anthropic = "^0.2.0"
openai          = "^1.40.0"   # xAI Grok is OpenAI-compatible

# PDF / file handling
pypdf           = "^4.0.0"
pytesseract     = "^0.3.13"
pillow          = "^10.0.0"
python-multipart = "^0.0.9"

# Data / utils
httpx           = "^0.27.0"
python-dotenv   = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.0.0"
pytest-asyncio  = "^0.23.0"
httpx           = "^0.27.0"   # for FastAPI TestClient

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
